RET-4985: Functional tests for Multiples (#1857)