@@ -21,7 +21,6 @@ import uk.gov.hmcts.ethos.replacement.apitest.model.Role;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -39,6 +38,7 @@ public class IdamTestApiRequests {
     private final HttpClient client;
     private final String baseIdamApiUrl;
     private static final String USER_PASSWORD = "Apassword123";
+    private CreateUser user;
 
     public IdamTestApiRequests(HttpClient client, String baseIdamApiUrl) {
         this.client = client;
@@ -51,17 +51,26 @@ public class IdamTestApiRequests {
             "ATestForename",
             "ATestSurname",
             USER_PASSWORD,
-            Collections.singletonList(new Role("citizen"))
+            List.of(new Role("citizen"), new Role("caseworker-employment-api"))
         );
 
         String body = new ObjectMapper().writeValueAsString(createUser);
-        makePostRequest(baseIdamApiUrl + "/testing-support/accounts", body);
+        String resJson = makePostRequest(baseIdamApiUrl + "/testing-support/accounts", body);
+        createUser.setId(getIdFromIdamResponse(new JSONObject(resJson)));
         log.info("BaseFunctionalTest user created.");
-
+        user = createUser;
         return createUser;
     }
 
-    private void makePostRequest(String uri, String body) throws IOException {
+    private String getIdFromIdamResponse(JSONObject idamResponse) {
+        try {
+            return idamResponse.getString("uuid");
+        } catch (Exception e) {
+            return idamResponse.getString("id");
+        }
+    }
+
+    private String makePostRequest(String uri, String body) throws IOException {
         HttpResponse createUserResponse = client.execute(post(uri)
                                                              .setEntity(new StringEntity(body, APPLICATION_JSON))
                                                              .build());
@@ -70,26 +79,37 @@ public class IdamTestApiRequests {
 
         assertTrue(statusCode == CREATED.value() || statusCode == OK.value());
         log.info("BaseFunctionalTest user created.");
+        return EntityUtils.toString(createUserResponse.getEntity());
     }
 
     /**
      * Get Access Token when testing locally - uses standard login journey which requires xui app to be running.
      */
     public String getLocalAccessToken() throws IOException {
+        List<String> cookies = idamAuth();
+
+        String auth = cookies.stream().filter(o -> o.startsWith("__auth__")).findFirst().get();
+        return "Bearer " + auth.substring(9, auth.indexOf(";"));
+    }
+
+    /**
+     * Authorize with Idam and return cookies.
+     */
+    public List<String> idamAuth() throws IOException {
         HttpClient instance = HttpClientBuilder.create().disableRedirectHandling().build();
-        HttpResponse response = instance.execute(new HttpGet("http://localhost:3455/auth/login"));
+        HttpResponse response = instance.execute(new HttpGet("http://localhost:3000/auth/login"));
 
         List<String> cookies =
-            Arrays.stream(response.getHeaders("Set-Cookie")).map(o -> o.getValue().substring(0,
-                o.getValue().indexOf(";"))).collect(Collectors.toList());
+                Arrays.stream(response.getHeaders("Set-Cookie")).map(o -> o.getValue().substring(0,
+                        o.getValue().indexOf(";"))).collect(Collectors.toList());
 
         cookies.add("seen_cookie_message=yes");
         cookies.add("cookies_policy={ \"essential\": true, \"analytics\": false, \"apm\": false }");
         cookies.add("cookies_preferences_set=false");
 
         List<NameValuePair> formparams = new ArrayList<>();
-        formparams.add(new BasicNameValuePair("username", "et.dev@hmcts.net"));
-        formparams.add(new BasicNameValuePair("password", "Pa55word11"));
+        formparams.add(new BasicNameValuePair("username", user.getEmail()));
+        formparams.add(new BasicNameValuePair("password", user.getPassword()));
         formparams.add(new BasicNameValuePair("save", "Sign in"));
         formparams.add(new BasicNameValuePair("selfRegistrationEnabled", "true"));
         formparams.add(new BasicNameValuePair("azureLoginEnabled", "true"));
@@ -97,11 +117,11 @@ public class IdamTestApiRequests {
         formparams.add(new BasicNameValuePair("_csrf", "idklol"));
         UrlEncodedFormEntity entity = new UrlEncodedFormEntity(formparams, Consts.UTF_8);
 
-        HttpResponse loginResponse = client.execute(post(response.getHeaders("Location")[0].getValue())
-            .setHeader("Content-type", APPLICATION_FORM_URLENCODED_VALUE)
-            .setHeader("Cookie", String.join("; ", cookies))
-            .setEntity(entity)
-            .build());
+        HttpResponse loginResponse = instance.execute(post(response.getHeaders("Location")[0].getValue())
+                .setHeader("Content-type", APPLICATION_FORM_URLENCODED_VALUE)
+                .setHeader("Cookie", String.join("; ", cookies))
+                .setEntity(entity)
+                .build());
 
         Header[] locations = loginResponse.getHeaders("Location");
 
@@ -109,12 +129,11 @@ public class IdamTestApiRequests {
         String cookieStr = String.join("; ", cookies);
         HttpGet httpGet = new HttpGet(locations[0].getValue());
         httpGet.setHeader("Cookie", cookieStr);
-        HttpResponse callbackResponse = instance.execute(httpGet);
 
-        String auth = Arrays.stream(callbackResponse.getHeaders("Set-Cookie")).filter(o -> o.getValue().startsWith(
-            "__auth__")).findFirst().get().getValue();
+        HttpResponse execute = instance.execute(httpGet);
+        Arrays.stream(execute.getHeaders("Set-Cookie")).forEach(o -> cookies.add(o.getValue()));
 
-        return "Bearer " + auth.substring(9, auth.indexOf(";"));
+        return cookies;
     }
 
     public String getAccessToken(String email) throws IOException {
